Add workflow and macos switch